My solution